go package-lock.json, package.json,  node_modules

--- a/DuginEvgeny/index.html
+++ b/DuginEvgeny/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <!-- 1. Подключаем сторонний скрипт для работы с реактом, вот ссылка на офиц.сайт https://ru.reactjs.org/docs/cdn-links.html -->
+    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <!-- 2. Воспользуемся Node js. Будем использовать как утилиту для сборки. вот ссылка на офиц.сайт https://nodejs.org/en/ скачиваем версию 12.14.1 LTS (на данный момент нам не принципиально, какую версию мы используем) -->
+    <!-- Версия NodeJS 12.14.1 -->
+    <!-- Версия npm 6.13.14 -->package.json
+    <!-- 3. Пишем в терминале npm init -y (иницилизируем наш первый проект, создаем package.json) -->
+    <!-- 4. Пишем в терминале npm i -D webpack (
+    В package.json появились доп. записи:
+        devDependencies зависимости;
+        webpack пакеты наши. 
+        А также появились 
+        node_modules - папка,
+        package-lock.json - файл) -->
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
