--- a/Anna_Puchkova/src/index.html
+++ b/Anna_Puchkova/src/index.html
@@ -6,9 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React Course</title>
 </head>
-<body>
-
-    <div id="root"></div>
+<body style="height: 100%; margin: 0">
+    <div style="height: 100%" id="root"></div>
 
 </body>
 </html>
