--- a/Artem_Romanov/src/index.html
+++ b/Artem_Romanov/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Messanger</title>
 </head>
-<body style="height: 100%; margin: 0">
-<div style="height: 100%" id="root"></div>
+<body>
+<div id="root"></div>
 </body>
 </html>
