--- a/Ekaterina_Kirilenko/src/index.html
+++ b/Ekaterina_Kirilenko/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Chat</title>
 </head>
-<body>
-  <div id="root"></div>
+<body style="height: 100%; margin: 0">
+  <div style="height: 100%" id="root"></div>
 </body>
 </html>
