--- a/Anna_Puchkova/src/index.html
+++ b/Anna_Puchkova/src/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>React Course</title>
 </head>
-<body style="height: 100%; margin: 0">
-    <div style="height: 100%" id="root"></div>
+<body>
+    <div id="root"></div>
 
 </body>
 </html>
