--- a/Maxim_Vorobiev/src/index.html
+++ b/Maxim_Vorobiev/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React Messenger by Maxim Vorobiev</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
 </head>
 
 <body>
