--- a/Olga_Bogdanova/src/index.html
+++ b/Olga_Bogdanova/src/index.html
@@ -5,10 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>react</title>
+  <base href="/"> 
+
 
 </head>
 <body>
   <div id="root"></div>
-  <script type="text/javascript" src="index.js" defer></script>
+
 </body>
 </html>
