--- a/Roman_Beknazarov/src/index.html
+++ b/Roman_Beknazarov/src/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
-<body style="height: 100%; margin: 0">
-<div style="height: 100%" id="root"></div>
+<div id="root"></div>
 </body>
 </html>
