--- a/Olga_Zaglavnova/Lesson3/src/index.html
+++ b/Olga_Zaglavnova/Lesson3/src/index.html
@@ -6,9 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ReactJS Lesson1</title>
-    <!--<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-    -->
+    <base href="/">
 </head>
 <body>
 <div id="root"></div>
