--- a/Ekaterina_Kirilenko/src/index.html
+++ b/Ekaterina_Kirilenko/src/index.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Chat</title>
+  <base href="/">
 </head>
-<body style="height: 100%; margin: 0">
-  <div style="height: 100%" id="root"></div>
+<body>
+  <div id="root"></div>
 </body>
 </html>
