--- a/Anna_Puchkova/src/index.html
+++ b/Anna_Puchkova/src/index.html
@@ -6,10 +6,38 @@
     <meta http-equiv="X-UA-Compatible" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="styles/styles.css">
     <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>React Course</title>
+    <link rel="manifest" href="manifest/manifest.json">
 </head>
 <body>
     <div id="root"></div>
 
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function() {
+                navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
+                    // Registration was successful
+                    console.log('ServiceWorker успешно зарегистрирован со сферой действия: ', registration.scope);
+                    }, function(err) {
+                    // registration failed :(
+                    console.log('ServiceWorker не удалось зарегистрировать: ', err);
+                }).catch(function(err) {
+                    console.log(err)
+                });
+            });
+        } else {
+            console.log('ServiceWorker не поддерживается');
+        }
+     </script>
+     <script>
+        window.addEventListener('appinstalled', (evt) => {
+            fetch(<your_url>, {
+                method: 'GET',
+                credentials: 'include',
+            });
+        });
+      </script>
+      <script src="./notifications.js"></script>
 </body>
 </html>
