--- a/Roman_Balashov/react_project/src/index.html
+++ b/Roman_Balashov/react_project/src/index.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="theme-color" content="#7ACCE5">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>React</title>
     <base href="/">
     <link rel="manifest" href="manifest/manifest.json">
 </head>
+
 <body>
     <div id="root"></div>
 
 
-<script>
-    if ('serviceWorker' in navigator) {
-        window.addEventListener('load', function() {
-            navigator.serviceWorker.register('/service-worker.js').then(function(registration) {
-                // Registration was successful
-                console.log('ServiceWorker успешно зарегистрирован со сферой действия: ', registration.scope);
-                }, function(err) {
-                // registration failed :(
-                console.log('ServiceWorker не удалось зарегистрировать: ', err);
-            }).catch(function(err) {
-                console.log(err)
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function () {
+                navigator.serviceWorker.register('/service-worker.js').then(function (registration) {
+                    // Registration was successful
+                    console.log('ServiceWorker успешно зарегистрирован со сферой действия: ', registration.scope);
+                }, function (err) {
+                    // registration failed :(
+                    console.log('ServiceWorker не удалось зарегистрировать: ', err);
+                }).catch(function (err) {
+                    console.log(err)
+                });
+            });
+        } else {
+            console.log('ServiceWorker не поддерживается');
+        }
+    </script>
+
+    <script>
+        window.addEventListener('appinstalled', (evt) => {
+            fetch("/", {
+                method: 'GET',
+                credentials: 'include',
             });
         });
-    } else {
-        console.log('ServiceWorker не поддерживается');
-    }
- </script>
- 
+    </script>
 </body>
+
 </html>
