--- a/Roman_Balashov/react_project/src/index.html
+++ b/Roman_Balashov/react_project/src/index.html
@@ -13,8 +13,6 @@
 
 <body>
     <div id="root"></div>
-
-
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', function () {
@@ -41,6 +39,8 @@
             });
         });
     </script>
+    <script src="src/notifications.js"></script>
+    
 </body>
 
 </html>
